--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -65,24 +65,18 @@ jobs:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
 
-    # Build the Docker image
-    # - name: Build and Push Docker Images
-    #   run: |
-    #     microservices=("chat-service" "collaboration-service" "editor-service" "matchmaking-service" "history-service" "question-service" "eval-service" "frontend")
-    #     for service in "${microservices[@]}"
-    #     do
-    #       echo "Building image for $service"
-    #       docker build -t "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" $service/
-    #       echo "Pushing image for $service"
-    #       docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA"  
-    #     done
-    #   shell: bash
-
-    # # Set up kustomize
-    # - name: Set up Kustomize
-    #   run: |-
-    #     curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-    #     chmod u+x ./kustomize
+    Build the Docker image
+    - name: Build and Push Docker Images
+      run: |
+        microservices=("eval-service")
+        for service in "${microservices[@]}"
+        do
+          echo "Building image for $service"
+          docker build -t "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" $service/
+          echo "Pushing image for $service"
+          docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA"  
+        done
+      shell: bash
 
     # Deploy the Docker image to the GKE cluster
     # eval-service has issues
